# pico-control-motor-dc

./: .gitignore  CMakeLists.txt
encoder_test/: CMakeLists.txt  encoder_test.cpp
i2c_test_master/: i2c_test_master.cpp
i2c_test_slave/: CMakeLists.txt  i2c_test_slave.cpp
include/: command.h  dc_motor.h  dc_motor_v2.h  encoder.h  encoder_cuadratura.h  pi_controller.h  pid_controller.h  pid_filter.h  pid_filter2.h  pid_v3.h  pins.h  robot.h  temperature.h
motor_test/: CMakeLists.txt  motor_test.cpp
multicore_test/: CMakeLists.txt  multicore.cpp
pid_motor_test/: CMakeLists.txt  pid_motor_test.cpp
robot/: CMakeLists.txt
robot/master_controller/: CMakeLists.txt  master.cpp  master_V3.cpp  master_copy.cpp
robot/slave_controller/: CMakeLists.txt  slave.cpp  slave_V3.cpp
src/: dc_motor_v2.cpp  encoder.cpp  encoder_cuadratura.cpp  main.cpp  pi_controller.cpp  pid_filter.cpp  pid_filter2.cpp  pid_v3.cpp  robot.cpp  stepper.cpp  temperature.cpp
test/: CMakeLists.txt
test/adc_test/: CMakeLists.txt  adc_test.cpp
test/encoder_test/: CMakeLists.txt  encoder_test.cpp
test/i2c_test_master/: CMakeLists.txt  i2c_test_master.cpp
test/i2c_test_slave/: i2c_test_slave.cpp
test/motor_test/: CMakeLists.txt  motor_test.cpp
test/multicore_test/: CMakeLists.txt
test/pid_motor_test/: CMakeLists.txt  copy2_pid_motor_test.cpp  copy_pid_motor_test.cpp  one_pid_motor_test.cpp  pid_motor_test.cpp
